--- a/index.html
+++ b/index.html
@@ -8,10 +8,57 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+<body class="work-sans">
+  <header>
+    <nav class="navbar">
+      <h1>G3 Architects</h1>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact Us</a></li>
+        <li><a href="">Login</a></li>
+      </ul>
+    </nav>
+    <!-- banner-area -->
+    <div class="banner_area">
+      <div class="banner_contant">
+        <h1 class="banner_title">Brand New <br>
+          Group of Architects</h1>
+        <p class="banner_description">There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
+        <button class="btn">Explore More</button>
+      </div>
+      <img class="banner_img" src="images/banner.png" alt="">
+    </div>
+  </header>
+
+  <main>
+    <!-- teams section start -->
+    <section class="team_section">
+      <div class="team_img_container">
+        <img src="images/team1.png" alt="">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
+      </div>
+      <div class="our-features">
+        <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our
+          </span><span class="text_primary">Features</span></h3>
+        <p class="features_description">There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
+        <button id="team_btn" class="btn">Explore More</button>
+      </div>
+    </section>
+
+    <!-- features section start -->
+
+    <section class="features">
+
+    </section>
+  </main>
+
 </body>
 
 </html>
