--- a/index.html
+++ b/index.html
@@ -55,9 +55,118 @@
     <!-- features section start -->
 
     <section class="features">
+      <div>
+        <h3 id="feature-section-title">Features you will <br> love & enjoy</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+        <!-- features_section_card_area -->
+
+        <div class="feature-card">
+          <h4 class="feature_title">Dexktop & Mobile Version</h4>
+          <p class="feature_description">There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+
+        <div class="feature-card">
+          <h4 class="feature_title">Drag & Drop Builder</h4>
+          <p class="feature_description">There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+
+        <div class="feature-card">
+          <h4 class="feature_title">Awesome Modern Design</h4>
+          <p class="feature_description">There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+
+        <div class="feature-card">
+          <h4 class="feature_title">Super Easy to Edit</h4>
+          <p class="feature_description">There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+      </div>
+
+      <!-- ----feature_img-area--- -->
+      <div class="feature_img">
+        <img src="images/architect.png" alt="">
+        <button id="experience_badge" class="btn">
+          <span id="experience_year">10+Years</span>
+          <br>
+          <span>Experience</span>
+        </button>
+      </div>
+    </section>
+    <!-- some facts area -->
+
+    <section class="fact_container">
+      <h3 class="fact_title">Some Facts</h3>
+      <p class="fact_description">There are many variations of passages of Lorem Ipsum available, but <br> the majority
+        have suffered alteration.</p>
+    </section>
+
+    <section class="card_container">
+      <div class="card_box">
+        <div id="card_contant">
+          <img src="images/icons/ribon.png" alt="" class="fact_icon">
+          <h4 class="number">54</h4>
+          <h2 class="title">Awards Winnings</h2>
+        </div>
+        <div id="card_contant">
+          <img src="images/icons/projects.png" alt="" class="fact_icon">
+          <h4 class="number">1458</h4>
+          <h2 class="title">Project Finished</h2>
+        </div>
+        <div id="card_contant">
+          <img src="images/icons/customers.png" alt="" class="fact_icon">
+          <h4 class="number">590</h4>
+          <h2 class="title">Clients Worked</h2>
+        </div>
+        <div id="card_contant">
+          <img src="images/icons/email.png" alt="" class="fact_icon">
+          <h4 class="number">22578</h4>
+          <h2 class="title">Email Send</h2>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Sponspors-area -->
+    <section>
+      <div class="Sponspor_info">
+        <h3 class="sponspor_title">Our Sponspors</h3>
+        <p class="sponspor_description">There are many variations of passages of Lorem Ipsum available, but <br> the
+          majority have suffered alteration.</p>
+      </div>
+
+      <div class="sponspor_company">
+        <div class="img1">
+          <img src="images/sponsors/spotify.png" alt="">
+        </div>
+        <div class="img1">
+          <img src="images/sponsors/amazon.png" alt="">
+        </div>
+        <div class="img1">
+          <img src="images/sponsors/google.png" alt="">
+        </div>
+        <div class="img1">
+          <img src="images/sponsors/telerama.png" alt="">
+        </div>
+        <div class="img1">
+          <img src="images/sponsors/figma.png" alt="">
+        </div>
+      </div>
     </section>
   </main>
+  <footer>
+    <div class="footer_container">
+      <p>All rights reserved copyright@2023 startup landing page design</p>
+    </div>
+
+  </footer>
 
 </body>
 
